--- a/NorthwindApp/MainWindow.xaml
+++ b/NorthwindApp/MainWindow.xaml
@@ -11,6 +11,8 @@
         <CollectionViewSource x:Key="customerViewSource1" d:DesignSource="{d:DesignInstance {x:Type local:Customer}}"/>
         <CollectionViewSource x:Key="productViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Product}}"/>
         <CollectionViewSource x:Key="productViewSource3" d:DesignSource="{d:DesignInstance {x:Type local:Product}}"/>
+        <CollectionViewSource x:Key="categoriesViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Product}}"/>
+        <CollectionViewSource x:Key="supplierViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Product}}"/>
     </Window.Resources>
     <TabControl>
         <TabItem>
@@ -24,31 +26,33 @@
                         <ColumnDefinition Width="500"/>
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
-                    <Image DataContext="{Binding Source={StaticResource productViewSource3}}" HorizontalAlignment="Left" Width="500">
-                    </Image>
-                    <Grid>
+
+                    <Grid DataContext="{Binding Source={StaticResource categoriesViewSource}}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"/>
                             <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
                         <Label x:Name="IDEditLabel" Content="ID" HorizontalAlignment="Left" Height="28" Margin="10,25,0,0" VerticalAlignment="Top" Width="55" Grid.Column="0"/>
                         <TextBox Height="22" x:Name="IDEdit" Margin="0,28,0,0" Grid.Column="1" VerticalAlignment="Top"/>
-                        <ComboBox HorizontalAlignment="Center" Height="23" Margin="0,118,0,0" VerticalAlignment="Top" Width="160" Grid.Column="1">
-                            
-                        </ComboBox>
+
                         <Label x:Name="NameEditLabel" Content="Product name" Height="26" Margin="0,58,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
-                        <TextBox Height="22" x:Name="NameEdit" Margin="0,89,0,0" Grid.Column="1" VerticalAlignment="Top"/>
+                        <TextBox Height="22" x:Name="NameEdit" Margin="0,60,0,0" Grid.Column="1" VerticalAlignment="Top"/>
                         <Label x:Name="CategoryEditLabel" Content="Category" HorizontalAlignment="Left" Height="28" Margin="0,118,0,0" VerticalAlignment="Top" Width="65" Grid.Column="0"/>
-                        <TextBox Height="22" x:Name="CategoryEdit" Margin="0,60,0,0" Grid.Column="1" VerticalAlignment="Top"/>
+                        <TextBox Height="22" x:Name="QtyUnitEdit" Margin="0,89,0,0" Grid.Column="1" VerticalAlignment="Top"/>
+                        <ComboBox x:Name="CategoriesComboEdit" ItemsSource="{Binding Source={StaticResource categoriesViewSource}}"  DisplayMemberPath="CategoryName" HorizontalAlignment="Center" Height="23" Margin="0,118,0,0" VerticalAlignment="Top" Width="160" Grid.Column="1">
+
+                        </ComboBox>
                         <Label x:Name="QtyUnitEditLabel" Content="Quantity/Unit" Height="26" Margin="0,87,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
                         <Label x:Name="StockEditLabel" Content="Quantity" Height="26" Margin="0,146,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
                         <TextBox Height="22" x:Name="StockEdit" Margin="0,148,0,0" Grid.Column="1" VerticalAlignment="Top"/>
                         <Label x:Name="PriceEditLabel" Content="Price" Height="26" Margin="0,168,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
                         <TextBox Height="22" x:Name="PriceEdit" Margin="0,175,0,0" Grid.Column="1" VerticalAlignment="Top"/>
                         <Label x:Name="DiscontinuedEditLabel" Content="Discontinued" Height="26" Margin="0,194,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
-                        <CheckBox Grid.Column="1" Margin="0,202,-20,0"/>
-                        <Label x:Name="SupplierEditLabel" Content="Supplier ID" Height="26" Margin="0,219,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
-                        <TextBox Height="22" x:Name="SupplierEdit" Margin="0,224,0,0" Grid.Column="1" VerticalAlignment="Top"/>
+                        <CheckBox x:Name="DiscontinuedEdit" Grid.Column="1" Margin="0,202,144,31"/>
+                        <Label x:Name="SupplierEditLabel" Content="Supplier" Height="26" Margin="0,219,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Grid.Column="0"/>
+                        <ComboBox x:Name="SupplierComboEdit" ItemsSource="{Binding Source={StaticResource supplierViewSource}}"  DisplayMemberPath="CompanyName" HorizontalAlignment="Center" Height="24" Margin="0,220,0,0" VerticalAlignment="Top" Width="160" Grid.Column="1"/>
+                        <Label Content="Reorder level" HorizontalAlignment="Left" Height="28" Margin="0,250,0,0" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.341,0.049"/>
+                        <TextBox Height="22" x:Name="ReorderLevelEdit" Margin="0,253,0,0" Grid.Column="1" VerticalAlignment="Top"/>
 
                     </Grid>
                     <DataGrid x:Name="productDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource productViewSource3}}" Grid.Column="1" RowDetailsVisibilityMode="VisibleWhenSelected" Margin="10,10,-684,-450">
@@ -67,8 +71,12 @@
                             <DataGridCheckBoxColumn x:Name="discontinuedColumn" Binding="{Binding Discontinued}" Header="Discontinued" Width="SizeToHeader" IsReadOnly="True" CanUserReorder="False"/>
                             <DataGridTextColumn x:Name="supplierColumn" Binding="{Binding Supplier.CompanyName}" Header="Supplier" Width="SizeToCells" IsReadOnly="True" CanUserReorder="False"/>
                             <DataGridTextColumn x:Name="unitsOnOrderColumn" Binding="{Binding UnitsOnOrder}" Header="Units On Order" Width="SizeToHeader" IsReadOnly="True" CanUserReorder="False"/>
+                            <DataGridTextColumn x:Name="ReorderLevelColumn" Binding="{Binding ReorderLevel}" Header="Reorder Level" Width="SizeToHeader" IsReadOnly="True" CanUserReorder="False"/>
+
                         </DataGrid.Columns>
                     </DataGrid>
+                    <Label Content="Double click a product to edit it" HorizontalAlignment="Left" Height="32" Margin="294,10,0,0" VerticalAlignment="Top" Width="196"/>
+                    <Button Content="GO" Click="Run_Product_Query" HorizontalAlignment="Center" Height="47" Margin="0,549,0,0" VerticalAlignment="Top" Width="480"/>
 
 
 
